--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorPrimary">#8644AD</color>
+    <color name="colorPrimaryDark">#87168F</color>
+    <color name="colorAccent">#00cccc</color>
+    <color name="colorIcon">#828488</color>
+    <color name="colorIconDis">#AFB4B8</color>
+    <color name="colorDivider">#BFD6E4</color>
     <color name="colorDefaultWhite">#f5f5f5</color>
 </resources>
