--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorDefaultWhite"
     android:fitsSystemWindows="true"
-    tools:context=".NewsFeedFragment">
+    tools:context=".ui.fragment.NewsFeedFragment">
 
 
     <android.support.v7.widget.RecyclerView
