--- a/app/src/main/res/layout/item_news_body.xml
+++ b/app/src/main/res/layout/item_news_body.xml
@@ -19,7 +19,7 @@
         android:maxLines="10"
         android:textColor="@android:color/primary_text_light"
         android:textSize="15sp"
-        tools:text="Text string, this is for text. Enough for text?..." />
+        tools:text="aaaaaaaaaaaaaaaaaa.." />
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
